# Pharmacy-api

./: .gitignore  README.md  pyproject.toml
app/: main.py  server.py
app/api/v1/: endpoints.py
app/crud/: __init__.py  crud.py
app/db/: backend_test.db  connection.py
app/models/: __init__.py  pharmacy.py  users.py
tests/: test_app.py
