[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gustavobr20 <gustavo.henrique.oliveira50@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = {extras = ["mypy"], version = "^1.4.40"}
python-multipart = "^0.0.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
app = "app.server:run_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
